# trading_app

./: README.md  pyproject.toml  test.py
backtesting/: .gitignore  checkers.py  config.py  data.csv  main.ipynb  main.py  test.ipynb
backtesting/data/: data_105min_candles.csv  data_120min_candles.csv  data_135min_candles.csv  data_150min_candles.csv  data_15min_candles.csv  data_165min_candles.csv  data_180min_candles.csv  data_190min_candles.csv  data_210min_candles.csv  data_240min_candles.csv  data_270min_candles.csv  data_300min_candles.csv  data_30min_candles.csv  data_330min_candles.csv  data_45min_candles.csv  data_5min_candles.csv  data_60min_candles.csv  data_75min_candles.csv  data_90min_candles.csv
backtesting/patterns/: dates.json
backtesting/patterns/trend_reversal_1_bearish/1/: 10candles.json  12candles.json  14candles.json  17candles.json  20candles.json  25candles.json  289candles.json  34candles.json  49candles.json  5candles.json  6candles.json  7candles.json  8candles.json  97candles.json  (+1 more)
backtesting/scripts/: build_pattern.py  fetch_data_for_tests.py
backtesting/src/: backtesting_program.py  checker.py  service.py  trade.py
backtesting/tests/: sniping_checker_0_test.py  testing_data.csv
backtesting/tests/checkers/: sniping_checker_0_test.py
backtesting/tests/service_funcitons/: compare_relative_candles_combos_test.py  find_combos_in_candles_datas_list_test.py  find_imbalance_zone_test.py  identify_market_structure_test.py  slice_data_from_session_start_to_candle_test.py  take_candle_sessions_test.py
display_chart/: index.html  main.js
(+47 files in other folders)
